# Svinder

./: .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: initial.py
src/: config.py  main.py  schemas.py  states.py
src/database/: __init__.py  models.py
src/handlers/: __init__.py  admin.py  commands.py  edit_profile.py  invite.py  likes.py  matching.py  profile.py  search_profile.py  start.py  user.py
src/keyboards/: inline.py  menu_commands.py  reply.py
src/middleware/: ban_middleware.py
src/repository/: database.py  models.py  queries.py  types.py
src/routers/: user.py
src/service/: db_service.py  llm.py  schemas.py
src/static/text/: texts.py
